# cmake_tutorial

./: .gitignore  CMakeLists.txt  all.cmd  build.cmd  clean.cmd  cmk_config.h.in  configure.cmd  main.cpp  makefile  readme.md  run.cmd
adder/: adder.cpp  adder.h
